--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 				<ul>
 					<li>list 1</li>
 					<li>list 2</li>
-					<li>ist 3</li>
-					
+					<li>list 3</li>
+					<li>list 4</li>
 				</ul>
 			</nav>
 		</div>
 		<div>
 			My super content of the git test!
+
 		</div>
 	</body>
 </html>
