--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 				</ul>
 			</nav>
 		</div>
-		<div>
-			My super content of the git test!
+		<footer>
+			<div>
+			My awesome footer!
 
-		</div>
+			</div>
+		</footer>
+		
 	</body>
 </html>
