gameAR first attentp

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<nav>
 				<ul>
 					<li>list 1dgdbgdbgbb</li>
-					<li>list 2</li>
+					<li>GameAR</li>
 					<li>list 3</li>
 					<li>list 4</li>
 					<li>list 4</li>
