--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 				<ul>
 					<li>list 1dgdbgdbgbb</li>
 					<li>GameAR</li>
-					<li>list 3</li>
-					<li>list 4</li>
+					<li>list 3bhjbhbhj</li>
+					<li>list 4ffff</li>
 					<li>list 4</li>
 					<li> <span id="marie">teststertet</span> list 4</li>
 
